Adjust carousel styling and put carousel in a wrapper to avoid it touching edges on mobiles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,7 +161,10 @@ section,
   padding: 20px;
   border-radius: 10px;
   max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 #carousel-affirmations .carousel-item {
   aspect-ratio: 16 / 9;
   overflow: hidden;
@@ -200,4 +203,13 @@ footer {
 #disclaimer {
   opacity: 0.5;
   line-height: 1.4;
+}
+
+/* Responsive adjustments for smaller screens */
+/* Affirmations carousel margin adjustment */
+@media (max-width: 768px) {
+  #carousel-affirmations {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
